# ibpcalc

./: CMakeLists.txt  README.md  dynamic_analysis.sh  ibp.c  ibpcalc.c  ibpcalc.h  ibpcalc_test.c  static_analysis.sh
doc/: 0_AlgorithmExplanation.txt  1_CodingStyle.txt  Doxyfile.in
